--- a/public/edit.html
+++ b/public/edit.html
@@ -22,8 +22,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand navbar-light"><div class="container"><a href="/" class="w-full text-center mx-auto navbar-brand"><h1 class="text-2xl font-bold">GistMarks</h1></a></div></nav>
-    <div><h3><a href="/edit"> Edit Bookmarks</a></h3></div><hr>
-    <script src="/gist-via-github.js"></script>
+    <div id="app"></div>
   </body>
+  <script src="static/dist/app.js"></script>
 </html>
